--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="small-0 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <h1 class="jj-header">I can't</h1>
-        <img src="/assets/img/angel.png" width="100%"></img>
+        <img src="assets/img/angel.png" width="100%"></img>
         <h1 class="jj-header">draw this</h1>
       </div>
       <div class="small-10 large-2 columns jj-note">
@@ -47,7 +47,7 @@
       <div class="small-0 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <h1 class="jj-header">I draw</h1>
-        <img src="/assets/img/blueprint.png" width="100%"></img>
+        <img src="assets/img/blueprint.png" width="100%"></img>
         <h1 class="jj-header">these</h1>
       </div>
       <div class="small-10 large-2 columns jj-note">
