optimizations for mobile

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <body>
 
     <div class="row jj-slide jj-slide-1">
-      <div class="small-1 large-2 columns">&nbsp;</div>
-      <div class="small-10 large-8 columns">
+      <div class="large-2 columns">&nbsp;</div>
+      <div class="large-8 columns">
         <h1 class="jj-header">Happy St. Valentine's Day!</h1>
         <p class="jj-centered">...</p>
         <h2 class="jj-header">It's your very own website!</h2>
       </div>
-      <div class="small-10 large-2 columns jj-note">
+      <div class="large-2 columns jj-note">
         Wow, this would be the perfect gift if it were the 90s! /sarcasm
       </div>
     </div>
 
-    <div class="row jj-slide jj-slide-white">
+    <div class="row jj-slide jj-slide-white jj-flex">
       <div class="small-1 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <p>You see...</p>
@@ -34,7 +34,7 @@
       <div class="small-0 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <h1 class="jj-header">I can't</h1>
-        <img src="assets/img/angel.png" width="100%"></img>
+        <img src="/assets/img/angel.png" width="100%"></img>
         <h1 class="jj-header">draw this</h1>
       </div>
       <div class="small-10 large-2 columns jj-note">
@@ -47,7 +47,7 @@
       <div class="small-0 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <h1 class="jj-header">I draw</h1>
-        <img src="assets/img/blueprint.png" width="100%"></img>
+        <img src="/assets/img/blueprint.png" width="100%"></img>
         <h1 class="jj-header">these</h1>
       </div>
       <div class="small-10 large-2 columns jj-note">
@@ -56,7 +56,7 @@
       <div class="large-1 columns">&nbsp;</div>
     </div>
 
-    <div class="row jj-slide jj-slide-white">
+    <div class="row jj-slide jj-slide-white jj-flex">
       <div class="small-1 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <p>And I make websites.</p>
@@ -68,7 +68,7 @@
       <div class="small-0 large-2 columns">&nbsp;</div>
       <div class="small-10 large-8 columns">
         <p class="jj-centered">♫ My gift is my craft<br>And this one's for you. ♫</p>
-        <h1 class="jj-header">therealjojo.<span class="jj-com-rocks-anim">
+        <h1 style="font-size: 70%" class="jj-header">therealjojo.<span class="jj-com-rocks-anim">
           <span class="jj-rocks">rocks</span>
         </span></h1>
         <p class="jj-centered">Happy Valentine's Day Jojo. You rock!</p>
@@ -76,7 +76,7 @@
       <div class="large-2 columns">&nbsp;</div>
     </div>
 
-    <div class="row jj-slide jj-slide-white">
+    <div class="row jj-slide-white" style="font-size:100%">
       <div class="small-1 large-3 columns">&nbsp;</div>
       <div class="small-10 large-6 columns">
         <p>I don't always check my mail promptly, so I didn't get your card until today,
@@ -84,7 +84,8 @@
           the bright yellow return address label.</p>
         <p>Upon reading it, I realized that I should have sent you something. I wanted
           you to get it today, but I don't really do ecards and I wanted it to be more
-          than just a thank you text. Logically, I bought you a website name, and
+          than just a thank you text.</p>
+        <p>Logically, I bought you a website name, and
           crafted this message on my weary old keyboard. I hope you like it, I hope
           your day was filled with fun, and I hope you text me once you read this site :)</p>
         <p>Reggie<br><br></p>
